cargo-features = ["strip"]

[package]
name = "soclose"
version = "0.1.0"
authors = ["Niklas Elsbrock <niklas@els-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["color", "derive", "std", "cargo"]

[dependencies.byte-unit]
version = "~4.0.9"
default-features = false
